- Fixed the Increased Seating mod not correctly rounding up when used on vehicles with 1 Seat.
- Notes copied in from PDFs are less likely to have line breaks in weird places, like after commas or semicolons.
- Critter definitions where inherent critter power, inherent gear, and/or natural weapon stats are based on the critter's force no longer cause Chummer to crash.

Data Changes:
- The Ares Light Fire 75's suppressor is no longer incorrectly referred to as the Ares Light Fire 70's suppressor.
- Added a new PDF Parameter option that is Adobe Acrobat-style, but always opens a new instance of the clicked file.
- Linguistics (the adept power) no longer increases a character's native language limit by 1.
- Amended Bunker Gear to properly get rating 8 Fire Resistance instead of rating 6.
- Limited Skill Autosofts to the skills listed in Rigger 5. 
- Added Skill Autosoft (Knowledge) per Rigger 5.
- Fixed Orks Have Natural Weapon Tusks customdata to provide Tusks instead of Horns.
- Fixed Ares Duelist not getting targeting autosoft
- Fixed Climate Adaptation and Proboscis metagenic qualities not having the correct flag. Closes #4278
- Added previously missing entries for the Proteus Krake's micro-torpedos and micro-torpedo launcher. Existing saves containing a Proteus Krake will have its previously buggy weapon mount entry replaced with a functional one that properly includes the micro-torpedo launcher.
- Added KEV toxin from Shadowrun Missions Season 8. Added SRM8 book.
- Removed the Advanced Ritual Casting requirement from Attune Item and Empower rituals. Closes #4277
- Added separate [Custom Cyberdeck] Firewall gear item for Fuchi Cyber-N.
- Corrected a few mentor spirit bonus texts that did not have spaces after colons.

Changed/New Strings:
- MessageTitle_AutosaveFound
- Message_AutosaveFound
- Message_InvalidTextFound
- Message_InvalidTextFound_Title

Build 213
Application Fixes: