@@ -25,6 +25,7 @@ Application Fixes:
 - Fixed the Increased Seating mod not correctly rounding up when used on vehicles with 1 Seat.
 - Notes copied in from PDFs are less likely to have line breaks in weird places, like after commas or semicolons.
 - Critter definitions where inherent critter power, inherent gear, and/or natural weapon stats are based on the critter's force no longer cause Chummer to crash.
+- Gear that is added to an armor mod now properly has its parent set to said armor mod, fixing various issues like being unable to delete gear added to an armor mod.
 
 Data Changes:
 - The Ares Light Fire 75's suppressor is no longer incorrectly referred to as the Ares Light Fire 70's suppressor.
